style: fix z-index of pin icon vs "unread messages" button in ChatList (#266)
* style: fix ChatList pin showing above Unread Messages notif

* chore: comment with z-index master list in _layout

* chore: [branch ch3885]

--- a/src/ui/chat/components/ChatList.scss
+++ b/src/ui/chat/components/ChatList.scss
@@ -79,6 +79,7 @@
     justify-content: center;
 
     position: fixed;
+    z-index: 2;
     height: 36px;
     width: $width-unread-notif;
     bottom: 0;
